--- a/main/docs/css/(SANS®) html.css
+++ b/main/docs/css/(SANS®) html.css
@@ -1,5 +1,5 @@
 /* this code was developed by Sans Institute of Technology and is not intended on being used for any copywritten purposes. The code provided is intentionally given by Sans Institute of Technology
-for this given workshop*/
+for this given workshop.*/
 
 :root {
     --sans-primary-color: #005f86;
